dataset1235/2025-2/2868285114/users/756942405/executions/3792430146_359761547.log
== SUBMISSION (2025-09-02 22:34:52)
-- CODE: 
idade = int(input("idade: "))
print(idade)
if (idade >= 2):
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:34:32)
-- CODE: 
idade = int(input("idade: "))
print(idade)
if (idade >= 2):
  print(paga)
else:
  print(nao_paga)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:34:35)
-- CODE: 
idade = int(input("idade: "))
print(idade)
if (idade >= 2):
  print(paga)
else:
  print(nao_paga)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
